Tweaked few more dialogs for Win7
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8382 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -926,19 +926,19 @@ BEGIN
     PUSHBUTTON      "Hide",IDC_DOWNLOAD_CANCEL,185,137,60,16
 END
 
-IDD_SETTINGS_SKINS DIALOG  0, 0, 282, 220
+IDD_SETTINGS_SKINS DIALOGEX 0, 0, 282, 220
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Skins"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
     CONTROL         "List1",IDC_SKINS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_NOCOLUMNHEADER | WS_BORDER | WS_GROUP | WS_TABSTOP,5,5,270,120
     GROUPBOX        "Skin Information:",IDC_STATIC,5,130,270,65,WS_GROUP
-    LTEXT           "Name:",IDC_STATIC,15,145,40,10
-    LTEXT           "...",IDC_SKIN_NAME,60,145,80,10
+    LTEXT           "Name:",IDC_STATIC,15,145,43,10
+    LTEXT           "...",IDC_SKIN_NAME,66,145,74,10
     LTEXT           "Author:",IDC_STATIC,150,145,30,10
     LTEXT           "...",IDC_SKIN_AUTHOR,180,145,85,10
-    LTEXT           "Description:",IDC_STATIC,15,160,40,10
-    EDITTEXT        IDC_SKIN_DESC,60,160,205,25,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
+    LTEXT           "Description:",IDC_STATIC,15,160,44,10
+    EDITTEXT        IDC_SKIN_DESC,65,160,200,25,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     PUSHBUTTON      "Delete",IDC_SKINS_DELETE,5,200,55,15,WS_GROUP
     PUSHBUTTON      "Install...",IDC_SKINS_BROWSE,160,200,55,15
     PUSHBUTTON      "Get More",IDC_SKINS_WEB,220,200,55,15
@@ -978,10 +978,10 @@ FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     CONTROL         "List1",IDC_PLUGINS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOCOLUMNHEADER | WS_BORDER | WS_GROUP | WS_TABSTOP,5,5,270,120
     GROUPBOX        "Plugin Information:",IDC_STATIC,5,130,270,65,WS_GROUP
-    LTEXT           "Name:",IDC_STATIC,15,145,40,10
-    LTEXT           "...",IDC_SKIN_NAME,60,145,205,10
-    LTEXT           "Description:",IDC_STATIC,15,160,40,10
-    EDITTEXT        IDC_SKIN_DESC,60,160,205,25,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
+    LTEXT           "Name:",IDC_STATIC,15,145,45,10
+    LTEXT           "...",IDC_SKIN_NAME,65,145,200,10
+    LTEXT           "Description:",IDC_STATIC,15,160,45,10
+    EDITTEXT        IDC_SKIN_DESC,65,160,200,25,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     PUSHBUTTON      "&Setup...",IDC_PLUGINS_SETUP,160,200,55,15
     PUSHBUTTON      "Get More",IDC_PLUGINS_WEB,220,200,55,15
 END
@@ -1057,7 +1057,7 @@ BEGIN
     CONTROL         "Create ghost files when deleting",IDC_MAKE_GHOSTS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,74,126,10
     CONTROL         "Smart video series detection",IDC_SMART_SERIES_DETECTION,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,88,107,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,88,127,10
 END
 
 IDD_FILE_METADATA DIALOG  0, 0, 246, 218
@@ -1243,8 +1243,8 @@ CAPTION "Shared Folder Manager"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     CONTROL         154,IDC_BANNER,"Static",SS_BITMAP,0,0,293,172
-    LTEXT           "This is a list of folders in your library.  You can add and remove folders using the buttons on the left.  When you add a new folder it is initially shared with other users, however you can unshare it from the Shareaza library if you wish.",IDC_STATIC,5,35,280,30
-    CONTROL         "List1",IDC_SHARE_FOLDERS,"SysListView32",LVS_REPORT | LVS_SHAREIMAGELISTS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,10,70,275,85
+    LTEXT           "This is a list of folders in your library.  You can add and remove folders using the buttons on the left.  When you add a new folder it is initially shared with other users, however you can unshare it from the Shareaza library if you wish.",IDC_STATIC,5,35,280,34
+    CONTROL         "List1",IDC_SHARE_FOLDERS,"SysListView32",LVS_REPORT | LVS_SHAREIMAGELISTS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,10,72,275,83
     PUSHBUTTON      "&Add...",IDC_SHARE_ADD,10,160,45,15
     PUSHBUTTON      "&Remove",IDC_SHARE_REMOVE,60,160,45,15,WS_DISABLED
     DEFPUSHBUTTON   "OK",IDOK,190,160,45,15
@@ -1825,7 +1825,7 @@ FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_TORRENT_NAME,60,14,226,12,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_TORRENT_CREATIONDATE,60,34,74,12,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TORRENT_CREATEDBY,173,34,113,12,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TORRENT_CREATEDBY,180,34,106,12,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_TORRENT_COMMENTS,60,53,226,77,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
     EDITTEXT        IDC_TORRENT_OTHER,60,137,226,12,ES_AUTOHSCROLL | ES_READONLY
     COMBOBOX        IDC_TORRENT_STARTDOWNLOADS,173,174,113,66,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -1833,7 +1833,7 @@ BEGIN
     GROUPBOX        "Torrent &Information:",-1,7,3,286,153
     LTEXT           "Name:",-1,14,14,44,12,SS_CENTERIMAGE
     LTEXT           "Created:",-1,14,34,44,12,SS_CENTERIMAGE
-    LTEXT           "By:",-1,136,34,32,12,SS_CENTERIMAGE,WS_EX_RIGHT
+    LTEXT           "By:",-1,136,34,37,12,SS_CENTERIMAGE,WS_EX_RIGHT
     LTEXT           "Comments:",-1,14,54,44,12,SS_CENTERIMAGE
     GROUPBOX        "Transfers:",-1,7,161,286,52
     RTEXT           "Start new download transfers:",-1,14,175,154,9
