[BugTrapSort] Fixed address parsing, updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8399 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -16,7 +16,7 @@
 [options]
 
 ; Input folder with unzipped crash report folders
-input=C:\Projects\Shareaza\crashes_in
+input=C:\Projects\Shareaza\crashes_in\*.*
 
 ; Default output path (with keywords)
 output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_PLATFORM}\{MODULE}\{ADDRESS}\{REPORT}\
@@ -24,8 +24,8 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 ; Sufficient module names while stack parsing, caseinsensitive, use "|" as delimiter
 accept=shareaza.exe
 
-; Ignored module names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=msvcrt.dll|ntdll.dll|user32.dll|gdi32.dll|kernel32.dll|COMCTL32.dll|uxtheme.dll|mswsock.dll|ws2_32.dll|wininet.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
+ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|gdi32.dll|kernel32.dll|COMCTL32.dll|uxtheme.dll|mswsock.dll|ws2_32.dll|wininet.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -38,27 +38,27 @@ ignore=msvcrt.dll|ntdll.dll|user32.dll|gdi32.dll|kernel32.dll|COMCTL32.dll|uxthe
 
 [CMatchFile::GetFilteredCount]
 if={ADDRESS}
-is=001B00416BC9
+is=00416BC9
 output=C:\Projects\Shareaza\crashes\fixed\CMatchFile GetFilteredCount\{VER_NUMBER}\{REPORT}
 
 [CFragmentedFile::VirtualRead]
 if={ADDRESS}
-is=001B00477BA4
+is=00477BA4
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBER}\{REPORT}
 
 [CFragmentBar::DrawFragment]
 if={ADDRESS}
-is=001B006006ED
+is=006006ED
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentBar DrawFragment\{VER_NUMBER}\{REPORT}
 
 [CLibraryBuilderInternals::CopyID3v2Field]
 if={ADDRESS}
-is=001B00594497
+is=00594497
 output=C:\Projects\Shareaza\crashes\fixed\CLibraryBuilderInternals CopyID3v2Field\{VER_NUMBER}\{REPORT}
 
 [CBTClient::OnExtended]
 if={ADDRESS}
-is=0023015680E2
+is=015680E2
 output=C:\Projects\Shareaza\crashes\fixed\CBTClient OnExtended\{VER_NUMBER}\{REPORT}
 
 ; ------------------------------------------------------------------------
@@ -170,70 +170,115 @@ if={WHAT}
 is=ILLEGAL_INSTRUCTION
 output=C:\Projects\Shareaza\crashes\known\ILLEGAL_INSTRUCTION\{CPU}\{REPORT}
 
-[recv]
+[recv 1]
 if={ADDRESS}
-is=001B005E2785
+is=005E2785
 output=C:\Projects\Shareaza\crashes\known\recv\{REPORT}
 
-[recv]
+[recv 2]
 if={ADDRESS}
-is=0023004BB87C
+is=004BB87C
 output=C:\Projects\Shareaza\crashes\known\recv\{REPORT}
 
 [CLibraryFile::IsShared 1]
 if={ADDRESS}
-is=001B00EA3A27
+is=00EA3A27
 output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{REPORT}
 
 [CLibraryFile::IsShared 2]
 if={ADDRESS}
-is=001B00553A27
+is=00553A27
 output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{REPORT}
 
 [CLibraryFile::IsShared 3]
 if={ADDRESS}
-is=001B01513A27
+is=01513A27
 output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{REPORT}
 
 [CLibraryDictionary::Search]
 if={ADDRESS}
-is=001B008F6BD7
+is=008F6BD7
 output=C:\Projects\Shareaza\crashes\known\search\CLibraryDictionary Search\{VER_NUMBER}\{REPORT}
 
 [CSearchManager::Find 1]
 if={ADDRESS}
-is=001B004148CD
+is=004148CD
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
 
 [CSearchManager::Find 2]
 if={ADDRESS}
-is=001B00306BD7
+is=00306BD7
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
 
 [CSearchManager::Find 3]
 if={ADDRESS}
-is=001B00406BD7
+is=00406BD7
+output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
+
+[CSearchManager::Find 4]
+if={ADDRESS}
+is=001D6BD7
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
 
 [CManagedSearch::ExecuteNeighbours]
 if={ADDRESS}
-is=001B00417E6B
-output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch ExecuteNeighbours\{VER_NUMBER}\{REPORT}
+is=00417E6B
+output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{REPORT}
 
-[CDockContext::StartDrag]
+[CManagedSearch::Execute 1]
 if={ADDRESS}
-is=001B0044EEFE
+is=0058D099
+output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{REPORT}
+
+[CManagedSearch::Execute 2]
+if={ADDRESS}
+is=0058d0c7
+output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{REPORT}
+
+[CDockContext::StartDrag 1]
+if={ADDRESS}
+is=0044EEFE
+output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{REPORT}
+
+[CDockContext::StartDrag 2]
+if={ADDRESS}
+is=010D2E13
+output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{REPORT}
+
+[CDockContext::StartDrag 3]
+if={ADDRESS}
+is=013b6105
 output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{REPORT}
 
 [CLibraryBuilderInternals::ReadPDF]
 if={ADDRESS}
-is=001B00328B73
+is=00328B73
 output=C:\Projects\Shareaza\crashes\known\ReadPDF\{VER_NUMBER}\{REPORT}
 
 [CSkin::TrackPopupMenu]
 if={ADDRESS}
-is=001B0044953A
+is=0044953A
 output=C:\Projects\Shareaza\crashes\known\CSkin TrackPopupMenu\{VER_NUMBER}\{REPORT}
+
+[CDownloadTransferED2K::SelectFragment]
+if={ADDRESS}
+is=005C6C6B
+output=C:\Projects\Shareaza\crashes\known\CDownloadTransferED2K SelectFragment\{VER_NUMBER}\{REPORT}
+
+[CDownloadTransferBT::SelectFragment]
+if={ADDRESS}
+is=005C8B43
+output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SelectFragment\{VER_NUMBER}\{REPORT}
+
+[CDownloadTransferBT::SendRequests]
+if={ADDRESS}
+is=005C91F9
+output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SendRequests\{VER_NUMBER}\{REPORT}
+
+[CDownloadWithFile::GetEmptyFragmentList]
+if={ADDRESS}
+is=005C0048
+output=C:\Projects\Shareaza\crashes\known\CDownloadWithFile GetEmptyFragmentList\{VER_NUMBER}\{REPORT}
 
 ; ------------------------------------------------------------------------
 ; Bad reports
