[BugTrapSort] Added {TIMESTAMP}, added support for multiple "is"-strings, updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8400 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -5,7 +5,7 @@
 ; {VER_PLATFORM}	- Platform type: "32" or "64"
 ; {VER_REVISION}	- Revision name i.e. "rXXXX[m]"
 ; {VER_DATE}		- Revision date i.e. "YYYYMMDD"
-; {REPORT}			- Report name i.e. "YYMMDD-HHMMSS"
+; {TIMESTAMP}		- Report timestamp i.e. "YYMMDD-HHMMSS"
 ; {USER}			- User name
 ; {COMPUTER}		- Computer name
 ; {CPU}				- CPU name or type
@@ -15,22 +15,22 @@
 
 [options]
 
-; Input folder with unzipped crash report folders
+; Input folder with unzipped crash reports (wildcards and nested folders supported)
 input=C:\Projects\Shareaza\crashes_in\*.*
 
 ; Default output path (with keywords)
-output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_PLATFORM}\{MODULE}\{ADDRESS}\{REPORT}\
+output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_PLATFORM}\{MODULE}\{ADDRESS}\{TIMESTAMP}\
 
 ; Sufficient module names while stack parsing, caseinsensitive, use "|" as delimiter
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|gdi32.dll|kernel32.dll|COMCTL32.dll|uxtheme.dll|mswsock.dll|ws2_32.dll|wininet.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|uxtheme.dll|mswsock.dll|ws2_32.dll|wininet.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
 ; if=				- Expression (with keywords) used to find ...
-; is=				- ... this substring in it
+; is=				- ... this substring in it, caseinsensitive, use "|" as delimiter
 ; output			- Output path (with keywords)
 
 ; ------------------------------------------------------------------------
@@ -39,27 +39,27 @@ ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaz
 [CMatchFile::GetFilteredCount]
 if={ADDRESS}
 is=00416BC9
-output=C:\Projects\Shareaza\crashes\fixed\CMatchFile GetFilteredCount\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\fixed\CMatchFile GetFilteredCount\{VER_NUMBER}\{TIMESTAMP}
 
 [CFragmentedFile::VirtualRead]
 if={ADDRESS}
 is=00477BA4
-output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBER}\{TIMESTAMP}
 
 [CFragmentBar::DrawFragment]
 if={ADDRESS}
 is=006006ED
-output=C:\Projects\Shareaza\crashes\fixed\CFragmentBar DrawFragment\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\fixed\CFragmentBar DrawFragment\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryBuilderInternals::CopyID3v2Field]
 if={ADDRESS}
 is=00594497
-output=C:\Projects\Shareaza\crashes\fixed\CLibraryBuilderInternals CopyID3v2Field\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\fixed\CLibraryBuilderInternals CopyID3v2Field\{VER_NUMBER}\{TIMESTAMP}
 
 [CBTClient::OnExtended]
 if={ADDRESS}
 is=015680E2
-output=C:\Projects\Shareaza\crashes\fixed\CBTClient OnExtended\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\fixed\CBTClient OnExtended\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Other software
@@ -67,95 +67,160 @@ output=C:\Projects\Shareaza\crashes\fixed\CBTClient OnExtended\{VER_NUMBER}\{REP
 [iS3 Anti-Spyware]
 if={MODULE}
 is=SGPRXY.DLL
-output=C:\Projects\Shareaza\crashes\other\iS3 Anti-Spyware\{REPORT}
+output=C:\Projects\Shareaza\crashes\other\iS3 Anti-Spyware\{TIMESTAMP}
 
 [Spyware Doctor]
 if={MODULE}
 is=TFWAH.dll
-output=C:\Projects\Shareaza\crashes\other\Spyware Doctor\{REPORT}
+output=C:\Projects\Shareaza\crashes\other\Spyware Doctor\{TIMESTAMP}
 
 [EgisTec MyWinLocker 3]
 if={MODULE}
 is=mwlshellext.dll
-output=C:\Projects\Shareaza\crashes\other\MyWinLocker\{REPORT}
+output=C:\Projects\Shareaza\crashes\other\MyWinLocker\{TIMESTAMP}
 
 [PhotoDesktop]
 if={MODULE}
 is=uASMPEG4Vid.dll
-output=C:\Projects\Shareaza\crashes\other\PhotoDesktop\{REPORT}
+output=C:\Projects\Shareaza\crashes\other\PhotoDesktop\{TIMESTAMP}
 
 [Scar5 Simple File Shredder]
 if={MODULE}
 is=sfsshell.dll
-output=C:\Projects\Shareaza\crashes\other\Simple File Shredder\{REPORT}
+output=C:\Projects\Shareaza\crashes\other\Simple File Shredder\{TIMESTAMP}
+
+[nVIDIA Firewall]
+if={MODULE}
+is=nvappfilter.dll
+output=C:\Projects\Shareaza\crashes\other\nVIDIA Firewall\{TIMESTAMP}
+
+[Ashampoo FireWall]
+if={MODULE}
+is=spi.dll
+output=C:\Projects\Shareaza\crashes\other\Ashampoo FireWall\{TIMESTAMP}
+
+[IDM Desktop SMS]
+if={MODULE}
+is=oehook.dll
+output=C:\Projects\Shareaza\crashes\other\IDM Desktop SMS\{TIMESTAMP}
+
+[PCEye2000]
+if={MODULE}
+is=lsp32.dll
+output=C:\Projects\Shareaza\crashes\other\PCEye2000\{TIMESTAMP}
+
+[Norman Virus Control]
+if={MODULE}
+is=Niphk.dll
+output=C:\Projects\Shareaza\crashes\other\Norman Virus Control\{TIMESTAMP}
+
+[Imonitor Employee Activity Monitor]
+if={MODULE}
+is=netconfig.dll
+output=C:\Projects\Shareaza\crashes\other\Imonitor Employee Activity Monitor\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Codecs
 
-[AC3 ac3filter.ax]
+[AC3]
 if={MODULE}
 is=ac3filter.ax
-output=C:\Projects\Shareaza\crashes\codecs\AC3\{REPORT}
+output=C:\Projects\Shareaza\crashes\codecs\AC3\{MODULE}\{TIMESTAMP}
 
-[DivX divx.ax]
+[DivX]
 if={MODULE}
-is=divx.ax
-output=C:\Projects\Shareaza\crashes\codecs\DivX\{REPORT}
+is=divx.ax|divxdec.ax
+output=C:\Projects\Shareaza\crashes\codecs\DivX\{MODULE}\{TIMESTAMP}
 
-[DivX divxdec.ax]
+[XviD]
 if={MODULE}
-is=divxdec.ax
-output=C:\Projects\Shareaza\crashes\codecs\DivX\{REPORT}
+is=xvid.ax|xvidcore.dll|xvid.dll
+output=C:\Projects\Shareaza\crashes\codecs\XviD\{MODULE}\{TIMESTAMP}
+
+[Real]
+if={MODULE}
+is=RealMediaSplitter.ax
+output=C:\Projects\Shareaza\crashes\codecs\Real\{MODULE}\{TIMESTAMP}
+
+[MainConcept]
+if={MODULE}
+is=muveem2vd.ax
+output=C:\Projects\Shareaza\crashes\codecs\MainConcept\{MODULE}\{TIMESTAMP}
 
 [ATI]
 if={MODULE}
 is=atidvcr.dll
-output=C:\Projects\Shareaza\crashes\codecs\ATI\{REPORT}
+output=C:\Projects\Shareaza\crashes\codecs\ATI\{MODULE}\{TIMESTAMP}
 
-[XviD xvid.ax]
+[nVIDIA]
 if={MODULE}
-is=xvid.ax
-output=C:\Projects\Shareaza\crashes\codecs\XviD\{REPORT}
+is=nvauddec.ax
+output=C:\Projects\Shareaza\crashes\codecs\nVIDIA\{MODULE}\{TIMESTAMP}
 
-[XviD xvidcore.dll]
+[FFDShow]
 if={MODULE}
-is=xvidcore.dll
-output=C:\Projects\Shareaza\crashes\codecs\XviD\{REPORT}
+is=ffdshow.ax|libavcodec.dll|ff_libmad.dll|libmplayer.dll
+output=C:\Projects\Shareaza\crashes\codecs\FFDShow\{MODULE}\{TIMESTAMP}
 
-[FFDShow ffdshow.ax]
+[Nero Video]
 if={MODULE}
-is=ffdshow.ax
-output=C:\Projects\Shareaza\crashes\codecs\FFDShow\{REPORT}
+is=nevideo.ax|NeVideoHD.ax
+output=C:\Projects\Shareaza\crashes\codecs\Nero\{MODULE}\{TIMESTAMP}
 
-[FFDShow libavcodec.dll]
-if={MODULE}
-is=libavcodec.dll
-output=C:\Projects\Shareaza\crashes\codecs\FFDShow\{REPORT}
-
-[FFDShow libmad.dll]
-if={MODULE}
-is=ff_libmad.dll
-output=C:\Projects\Shareaza\crashes\codecs\FFDShow\{REPORT}
-
-[Nero (nevideo.ax)]
-if={MODULE}
-is=nevideo.ax
-output=C:\Projects\Shareaza\crashes\codecs\Nero\{REPORT}
-
-[Nero (NeVideoHD.ax)]
-if={MODULE}
-is=NeVideoHD.ax
-output=C:\Projects\Shareaza\crashes\codecs\Nero\{REPORT}
-
-[SPlayer (mpc_mtcontain.dll)]
+[SPlayer]
 if={MODULE}
 is=mpc_mtcontain.dll
-output=C:\Projects\Shareaza\crashes\codecs\SPlayer\{REPORT}
+output=C:\Projects\Shareaza\crashes\codecs\SPlayer\{MODULE}\{TIMESTAMP}
 
-[ACE Mega CoDecS Pack (pvljpg20.dll)]
+[ACE Mega CoDecS Pack]
 if={MODULE}
-is=pvljpg20.dll
-output=C:\Projects\Shareaza\crashes\codecs\ACE\{REPORT}
+is=pvljpg20.dll|pvmjpg21.dll
+output=C:\Projects\Shareaza\crashes\codecs\ACE\{MODULE}\{TIMESTAMP}
+
+[CyberLink PowerDVD]
+if={MODULE}
+is=DXdec.ax
+output=C:\Projects\Shareaza\crashes\codecs\PowerDVD\{MODULE}\{TIMESTAMP}
+
+[Windows]
+if={MODULE}
+is=drmv2clt.dll|msvidc32.dll
+output=C:\Projects\Shareaza\crashes\codecs\Windows\{MODULE}\{TIMESTAMP}
+
+[Nokia]
+if={MODULE}
+is=EmzMP3SourceFilter.dll
+output=C:\Projects\Shareaza\crashes\codecs\Nokia\{MODULE}\{TIMESTAMP}
+
+[Vista Codec Pack]
+if={MODULE}
+is=ff_realaac.dll
+output=C:\Projects\Shareaza\crashes\codecs\Vista\{MODULE}\{TIMESTAMP}
+
+[Samsung PC Studio 3]
+if={MODULE}
+is=fun_avcodec.dll
+output=C:\Projects\Shareaza\crashes\codecs\PCStudio\{MODULE}\{TIMESTAMP}
+
+[InterVideo]
+if={MODULE}
+is=IVIVIDEO.ax
+output=C:\Projects\Shareaza\crashes\codecs\InterVideo\{MODULE}\{TIMESTAMP}
+
+[JetAudio]
+if={MODULE}
+is=JetAVI.ax
+output=C:\Projects\Shareaza\crashes\codecs\JetAudio\{MODULE}\{TIMESTAMP}
+
+[L3codec MP3]
+if={MODULE}
+is=l3codecx.ax
+output=C:\Projects\Shareaza\crashes\codecs\L3codec\{MODULE}\{TIMESTAMP}
+
+[LMPGspl]
+if={MODULE}
+is=lmpgspl.ax
+output=C:\Projects\Shareaza\crashes\codecs\LMPGspl\{MODULE}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Known bugs
@@ -163,122 +228,77 @@ output=C:\Projects\Shareaza\crashes\codecs\ACE\{REPORT}
 [SSE]
 if={WHAT} {MODULE}
 is=ILLEGAL_INSTRUCTION Shareaza.exe
-output=C:\Projects\Shareaza\crashes\known\SSE\{CPU}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\SSE\{CPU}\{TIMESTAMP}
 
 [ILLEGAL_INSTRUCTION]
 if={WHAT}
 is=ILLEGAL_INSTRUCTION
-output=C:\Projects\Shareaza\crashes\known\ILLEGAL_INSTRUCTION\{CPU}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\ILLEGAL_INSTRUCTION\{CPU}\{TIMESTAMP}
 
-[recv 1]
+[recv]
 if={ADDRESS}
-is=005E2785
-output=C:\Projects\Shareaza\crashes\known\recv\{REPORT}
+is=005E2785|004BB87C
+output=C:\Projects\Shareaza\crashes\known\recv\{TIMESTAMP}
 
-[recv 2]
+[CLibraryFile::IsShared]
 if={ADDRESS}
-is=004BB87C
-output=C:\Projects\Shareaza\crashes\known\recv\{REPORT}
-
-[CLibraryFile::IsShared 1]
-if={ADDRESS}
-is=00EA3A27
-output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{REPORT}
-
-[CLibraryFile::IsShared 2]
-if={ADDRESS}
-is=00553A27
-output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{REPORT}
-
-[CLibraryFile::IsShared 3]
-if={ADDRESS}
-is=01513A27
-output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{REPORT}
+is=00EA3A27|00553A27|01513A27
+output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryDictionary::Search]
 if={ADDRESS}
 is=008F6BD7
-output=C:\Projects\Shareaza\crashes\known\search\CLibraryDictionary Search\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\search\CLibraryDictionary Search\{VER_NUMBER}\{TIMESTAMP}
 
-[CSearchManager::Find 1]
+[CSearchManager::Find]
 if={ADDRESS}
-is=004148CD
-output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
-
-[CSearchManager::Find 2]
-if={ADDRESS}
-is=00306BD7
-output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
-
-[CSearchManager::Find 3]
-if={ADDRESS}
-is=00406BD7
-output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
-
-[CSearchManager::Find 4]
-if={ADDRESS}
-is=001D6BD7
-output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{REPORT}
+is=004148CD|00306BD7|00406BD7|001D6BD7
+output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{TIMESTAMP}
 
 [CManagedSearch::ExecuteNeighbours]
 if={ADDRESS}
 is=00417E6B
-output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
 
-[CManagedSearch::Execute 1]
+[CManagedSearch::Execute]
 if={ADDRESS}
-is=0058D099
-output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{REPORT}
+is=0058D099|0058d0c7
+output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
 
-[CManagedSearch::Execute 2]
+[CDockContext::StartDrag]
 if={ADDRESS}
-is=0058d0c7
-output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{REPORT}
-
-[CDockContext::StartDrag 1]
-if={ADDRESS}
-is=0044EEFE
-output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{REPORT}
-
-[CDockContext::StartDrag 2]
-if={ADDRESS}
-is=010D2E13
-output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{REPORT}
-
-[CDockContext::StartDrag 3]
-if={ADDRESS}
-is=013b6105
-output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{REPORT}
+is=0044EEFE|010D2E13|013b6105
+output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryBuilderInternals::ReadPDF]
 if={ADDRESS}
 is=00328B73
-output=C:\Projects\Shareaza\crashes\known\ReadPDF\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\ReadPDF\{VER_NUMBER}\{TIMESTAMP}
 
 [CSkin::TrackPopupMenu]
 if={ADDRESS}
 is=0044953A
-output=C:\Projects\Shareaza\crashes\known\CSkin TrackPopupMenu\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\CSkin TrackPopupMenu\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadTransferED2K::SelectFragment]
 if={ADDRESS}
 is=005C6C6B
-output=C:\Projects\Shareaza\crashes\known\CDownloadTransferED2K SelectFragment\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\CDownloadTransferED2K SelectFragment\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadTransferBT::SelectFragment]
 if={ADDRESS}
 is=005C8B43
-output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SelectFragment\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SelectFragment\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadTransferBT::SendRequests]
 if={ADDRESS}
 is=005C91F9
-output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SendRequests\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SendRequests\{VER_NUMBER}\{TIMESTAMP}
 
 [CDownloadWithFile::GetEmptyFragmentList]
 if={ADDRESS}
 is=005C0048
-output=C:\Projects\Shareaza\crashes\known\CDownloadWithFile GetEmptyFragmentList\{VER_NUMBER}\{REPORT}
+output=C:\Projects\Shareaza\crashes\known\CDownloadWithFile GetEmptyFragmentList\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Bad reports
@@ -286,4 +306,4 @@ output=C:\Projects\Shareaza\crashes\known\CDownloadWithFile GetEmptyFragmentList
 [Unknown]
 if={MODULE}
 is=UNKNOWN
-output=C:\Projects\Shareaza\crashes\unknown\{VER_NUMBER}\{ADDRESS}\{REPORT}
+output=C:\Projects\Shareaza\crashes\unknown\{VER_NUMBER}\{ADDRESS}\{TIMESTAMP}
