[BugTrapSort] Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8401 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|uxtheme.dll|mswsock.dll|ws2_32.dll|wininet.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|uxtheme.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -212,15 +212,15 @@ if={MODULE}
 is=JetAVI.ax
 output=C:\Projects\Shareaza\crashes\codecs\JetAudio\{MODULE}\{TIMESTAMP}
 
-[L3codec MP3]
+[Fraunhofer MP3]
 if={MODULE}
 is=l3codecx.ax
-output=C:\Projects\Shareaza\crashes\codecs\L3codec\{MODULE}\{TIMESTAMP}
+output=C:\Projects\Shareaza\crashes\codecs\Fraunhofer MP3\{MODULE}\{TIMESTAMP}
 
-[LMPGspl]
+[Ligos Codecs]
 if={MODULE}
-is=lmpgspl.ax
-output=C:\Projects\Shareaza\crashes\codecs\LMPGspl\{MODULE}\{TIMESTAMP}
+is=lmpgspl.ax|mplvw7.dll
+output=C:\Projects\Shareaza\crashes\codecs\Ligos Codecs\{MODULE}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Known bugs
