--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|uxtheme.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
+ignore=shareaza.exe:00477BA4|shareaza.exe:01197BA4|shareaza.exe:002B4579|shareaza.exe:002F4A7E|shareaza.exe:00328B73|shareaza.exe:012C4579|shareaza.exe:01304A7E|shareaza.exe:01338b73|shareaza.exe:003978F1|shareaza.exe:004046BF|shareaza.exe:00407789|shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaza.exe:00477F22|shareaza.exe:0040B7B4|shareaza.exe:0040B913|shareaza.exe:0040B9E6|shareaza.exe:00477E3A|shareaza.exe:0040D025|shareaza.exe:0040D08C|shareaza.exe:0040A8F6|shareaza.exe:002C7E3A|shareaza.exe:002B7E3A|shareaza.exe:013A7E3A|shareaza.exe:01374A55|shareaza.exe:0133483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -36,6 +36,11 @@ ignore=shareaza.exe:0040EB4E|shareaza.exe:0040EBF4|shareaza.exe:004444C7|shareaz
 ; ------------------------------------------------------------------------
 ; Fixed
 
+[CLibraryWnd::OnCollection]
+if={ADDRESS}
+is=013eb1ac
+output=C:\Projects\Shareaza\crashes\fixed\CLibraryWnd OnCollection\{VER_NUMBER}\{TIMESTAMP}
+
 [CMatchFile::GetFilteredCount]
 if={ADDRESS}
 is=00416BC9
@@ -43,7 +48,7 @@ output=C:\Projects\Shareaza\crashes\fixed\CMatchFile GetFilteredCount\{VER_NUMBE
 
 [CFragmentedFile::VirtualRead]
 if={ADDRESS}
-is=00477BA4
+is=012D044C|005B044C|009f716b
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBER}\{TIMESTAMP}
 
 [CFragmentBar::DrawFragment]
@@ -58,8 +63,23 @@ output=C:\Projects\Shareaza\crashes\fixed\CLibraryBuilderInternals CopyID3v2Fiel
 
 [CBTClient::OnExtended]
 if={ADDRESS}
-is=015680E2
+is=015680E2|014980E2
 output=C:\Projects\Shareaza\crashes\fixed\CBTClient OnExtended\{VER_NUMBER}\{TIMESTAMP}
+
+[CPongCache::Add]
+if={ADDRESS}
+is=005820c0
+output=C:\Projects\Shareaza\crashes\fixed\CPongCache Add\{VER_NUMBER}\{TIMESTAMP}
+
+[CFileExecutor::IsSafeExecute]
+if={ADDRESS}
+is=00600D6B
+output=C:\Projects\Shareaza\crashes\fixed\CFileExecutor IsSafeExecute\{VER_NUMBER}\{TIMESTAMP}
+
+[CAlbumFolder::OrganiseFile]
+if={ADDRESS}
+is=0050D1A6
+output=C:\Projects\Shareaza\crashes\fixed\CAlbumFolder OrganiseFile\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Other software
@@ -118,6 +138,11 @@ output=C:\Projects\Shareaza\crashes\other\Norman Virus Control\{TIMESTAMP}
 if={MODULE}
 is=netconfig.dll
 output=C:\Projects\Shareaza\crashes\other\Imonitor Employee Activity Monitor\{TIMESTAMP}
+
+[Viruses]
+if={MODULE}
+is=wofurave.dll
+output=C:\Projects\Shareaza\crashes\other\Viruses\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Codecs
@@ -204,7 +229,7 @@ output=C:\Projects\Shareaza\crashes\codecs\PCStudio\{MODULE}\{TIMESTAMP}
 
 [InterVideo]
 if={MODULE}
-is=IVIVIDEO.ax
+is=IVIVIDEO.ax|MP4VDEC.ax
 output=C:\Projects\Shareaza\crashes\codecs\InterVideo\{MODULE}\{TIMESTAMP}
 
 [JetAudio]
@@ -222,6 +247,16 @@ if={MODULE}
 is=lmpgspl.ax|mplvw7.dll
 output=C:\Projects\Shareaza\crashes\codecs\Ligos Codecs\{MODULE}\{TIMESTAMP}
 
+[FLVSplitter]
+if={MODULE}
+is=FLVSplitter.ax
+output=C:\Projects\Shareaza\crashes\codecs\FLVSplitter\{MODULE}\{TIMESTAMP}
+
+[Pinnacle]
+if={MODULE}
+is=PCLEMPEGVideoDecoder2.ax
+output=C:\Projects\Shareaza\crashes\codecs\Pinnacle\{MODULE}\{TIMESTAMP}
+
 ; ------------------------------------------------------------------------
 ; Known bugs
 
@@ -237,12 +272,12 @@ output=C:\Projects\Shareaza\crashes\known\ILLEGAL_INSTRUCTION\{CPU}\{TIMESTAMP}
 
 [recv]
 if={ADDRESS}
-is=005E2785|004BB87C
+is=005E2785|004BB87C|008E90BA|008e96ba|01132785
 output=C:\Projects\Shareaza\crashes\known\recv\{TIMESTAMP}
 
 [CLibraryFile::IsShared]
 if={ADDRESS}
-is=00EA3A27|00553A27|01513A27
+is=00EA3A27|00553A27|01513A27|01523a27
 output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryDictionary::Search]
@@ -265,14 +300,29 @@ if={ADDRESS}
 is=0058D099|0058d0c7
 output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
 
+[CSearchManager::OnRun]
+if={ADDRESS}
+is=0056d963
+output=C:\Projects\Shareaza\crashes\known\search\CSearchManager OnRun\{VER_NUMBER}\{TIMESTAMP}
+
+[CSearchManager::~CSearchManager]
+if={ADDRESS}
+is=00B51BFF
+output=C:\Projects\Shareaza\crashes\known\search\CSearchManager ~CSearchManager\{VER_NUMBER}\{TIMESTAMP}
+
+[CQuerySearch::BuildWordList]
+if={ADDRESS}
+is=005798F2
+output=C:\Projects\Shareaza\crashes\known\search\CQuerySearch BuildWordList\{VER_NUMBER}\{TIMESTAMP}
+
 [CDockContext::StartDrag]
 if={ADDRESS}
-is=0044EEFE|010D2E13|013b6105
+is=0044EEFE|010D2E13|00452E13|013b6105
 output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{TIMESTAMP}
 
 [CLibraryBuilderInternals::ReadPDF]
 if={ADDRESS}
-is=00328B73
+is=00446164|014560B3
 output=C:\Projects\Shareaza\crashes\known\ReadPDF\{VER_NUMBER}\{TIMESTAMP}
 
 [CSkin::TrackPopupMenu]
@@ -299,6 +349,16 @@ output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SendRequests\{VER_
 if={ADDRESS}
 is=005C0048
 output=C:\Projects\Shareaza\crashes\known\CDownloadWithFile GetEmptyFragmentList\{VER_NUMBER}\{TIMESTAMP}
+
+[CHomeDownloadsBox::Update]
+if={ADDRESS}
+is=00c826eb
+output=C:\Projects\Shareaza\crashes\known\CHomeDownloadsBox Update\{VER_NUMBER}\{TIMESTAMP}
+
+[CSchema::CheckURI]
+if={ADDRESS}
+is=0013116e
+output=C:\Projects\Shareaza\crashes\known\CSchema CheckURI\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Bad reports
