[BugTrapSort] Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8413 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -36,6 +36,11 @@ ignore=shareaza.exe:00477BA4|shareaza.exe:01197BA4|shareaza.exe:002B4579|shareaz
 ; ------------------------------------------------------------------------
 ; Fixed
 
+[CDownloadTransferHTTP::OnDropped]
+if={ADDRESS}
+is=00dc545e
+output=C:\Projects\Shareaza\crashes\fixed\CDownloadTransferHTTP OnDropped\{VER_NUMBER}\{TIMESTAMP}
+
 [CLibraryWnd::OnCollection]
 if={ADDRESS}
 is=013eb1ac
@@ -48,7 +53,7 @@ output=C:\Projects\Shareaza\crashes\fixed\CMatchFile GetFilteredCount\{VER_NUMBE
 
 [CFragmentedFile::VirtualRead]
 if={ADDRESS}
-is=012D044C|005B044C|009f716b
+is=012D044C|005B044C|009f716b|009f6f6b
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBER}\{TIMESTAMP}
 
 [CFragmentBar::DrawFragment]
@@ -287,7 +292,7 @@ output=C:\Projects\Shareaza\crashes\known\search\CLibraryDictionary Search\{VER_
 
 [CSearchManager::Find]
 if={ADDRESS}
-is=004148CD|00306BD7|00406BD7|001D6BD7
+is=004148CD|00306BD7|00406BD7|001D6BD7|00B76BD7|00e16bd7
 output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{TIMESTAMP}
 
 [CManagedSearch::ExecuteNeighbours]
